fixed top overflow when cards are stacked
and too big.

we can now actually scroll thr u the entire content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,20 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.bigger-container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  place-items: center;
+  place-content: center;
+  flex-wrap: wrap;
+}
+
 .container {
+  margin: 20px;
   max-width: 400px;
   padding: 20px;
   border: 1px solid #ccc;
@@ -15,18 +28,4 @@ label {
 
 button {
   margin-top: 10px;
-}
-
-.bigger-container {
-  overflow-y: auto;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  place-items: center;
-  place-content: center;
-  flex-wrap: wrap;
-  gap: 40px;
 }
